--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "astro": "^2.3.2"
   },
   "devDependencies": {
+    "@unocss/preset-web-fonts": "^0.51.8",
+    "@unocss/reset": "^0.51.8",
     "unocss": "^0.51.8"
   }
 }
