--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@unocss/preset-web-fonts": "^0.51.13",
     "@unocss/reset": "^0.51.13",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.8.1",
     "unocss": "^0.51.13"
   }
 }
