--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,5 @@
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": [
-    "unocss"
-  ]
+  "cSpell.words": ["unocss"]
 }
