--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@unocss/preset-web-fonts": "^0.51.13",
     "@unocss/reset": "^0.51.13",
+    "@unocss/transformer-directives": "^0.51.13",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.1",
     "unocss": "^0.51.13"
