add new image service, update slot machine effect styling

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "alpinejs": "^3.0.0",
     "astro": "^2.5.0",
     "astro-seo": "^0.7.2",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@unocss/preset-web-fonts": "^0.51.13",
