--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
+    "dev:pages": "wrangler pages dev --local=false -- pnpm dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -41,6 +42,8 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@cloudflare/pages-plugin-mailchannels": "^0.1.2",
+    "@cloudflare/workers-types": "^4.20230518.0",
     "@types/minimasonry": "^1.3.2",
     "@unocss/preset-web-fonts": "^0.56.5",
     "@unocss/reset": "^0.56.5",
@@ -49,6 +52,7 @@
     "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "unocss": "^0.56.5",
-    "wrangler": "^3.14.0"
+    "wrangler": "^3.14.0",
+    "typescript": "^5.0.4"
   }
 }
