--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "pages:dev": "wrangler pages dev --compatibility-date=2023-05-30 --proxy 3000 -- astro dev",
+    "pages:deploy": "astro build && wrangler pages deploy ./dist --branch=preview --project-name=brielle-french-design",
+    "pages:deploy:prod": "astro build && wrangler pages deploy ./dist --branch=main --project-name=brielle-french-design",
     "format": "prettier -w . --plugin-search-dir=.",
     "format:check": "prettier -c . --plugin-search-dir=.",
     "typeCheck": "astro check && tsc --noEmit"
@@ -28,6 +31,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.9.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "unocss": "^0.52.4"
+    "unocss": "^0.52.4",
+    "wrangler": "^3.0.1"
   }
 }
