--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "alpinejs": "^3.12.2",
     "astro": "^2.6.4",
     "astro-seo": "^0.7.4",
+    "contentful": "^10.2.4",
     "sass": "^1.63.4",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "snarkdown": "^2.0.0"
   },
   "devDependencies": {
     "@unocss/preset-web-fonts": "^0.53.1",
