--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "alpinejs": "^3.12.3",
     "astro": "^2.8.5",
     "astro-seo": "^0.7.5",
+    "blaze-slider": "^1.9.3",
     "contentful": "^10.3.5",
     "sass": "^1.63.6",
     "sharp": "^0.32.3",
