--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "astro": "^2.8.5",
     "astro-seo": "^0.7.5",
     "contentful": "^10.3.5",
+    "minimasonry": "^1.3.2",
     "sass": "^1.63.6",
     "sharp": "^0.32.3",
     "snarkdown": "^2.0.0"
   },
   "devDependencies": {
+    "@types/minimasonry": "^1.3.0",
     "@unocss/preset-web-fonts": "^0.53.5",
     "@unocss/reset": "^0.53.5",
     "@unocss/transformer-directives": "^0.53.5",
