update to Astro 3

--- a/package.json
+++ b/package.json
@@ -19,35 +19,36 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "pages:dev": "wrangler pages dev --compatibility-date=2023-05-30 --proxy 3000 -- astro dev",
+    "pages:dev": "wrangler pages dev --compatibility-date=2023-05-30 --proxy 4321 -- astro dev",
     "pages:deploy": "astro build && wrangler pages deploy ./dist --branch=preview --project-name=brielle-french-design",
     "pages:deploy:prod": "astro build && wrangler pages deploy ./dist --branch=main --project-name=brielle-french-design",
-    "format": "prettier -w . --plugin-search-dir=.",
-    "format:check": "prettier -c . --plugin-search-dir=.",
+    "format": "prettier -w . --plugin prettier-plugin-astro",
+    "format:check": "prettier -c . --plugin prettier-plugin-astro",
     "typeCheck": "astro check && tsc --noEmit"
   },
   "dependencies": {
-    "@astrojs/alpinejs": "^0.2.2",
+    "@astrojs/alpinejs": "^0.3.0",
+    "@astrojs/check": "^0.2.0",
     "@types/alpinejs": "^3.7.2",
-    "alpinejs": "^3.12.3",
-    "astro": "^2.9.0",
-    "astro-seo": "^0.7.5",
+    "alpinejs": "^3.13.0",
+    "astro": "^3.0.12",
+    "astro-seo": "^0.8.0",
     "blaze-slider": "^1.9.3",
-    "contentful": "^10.3.6",
+    "contentful": "^10.5.1",
     "minimasonry": "^1.3.2",
-    "sass": "^1.64.0",
-    "sharp": "^0.32.4",
-    "snarkdown": "^2.0.0"
+    "sass": "^1.66.1",
+    "snarkdown": "^2.0.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/minimasonry": "^1.3.0",
-    "@unocss/preset-web-fonts": "^0.53.5",
-    "@unocss/reset": "^0.53.5",
-    "@unocss/transformer-directives": "^0.53.5",
-    "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.10.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "unocss": "^0.53.5",
-    "wrangler": "^3.3.0"
+    "@unocss/preset-web-fonts": "^0.55.7",
+    "@unocss/reset": "^0.55.7",
+    "@unocss/transformer-directives": "^0.55.7",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "unocss": "^0.55.7",
+    "wrangler": "^3.7.0"
   }
 }
