--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/alpinejs": "^3.13.3",
     "alpinejs": "^3.13.2",
     "astro": "^3.3.2",
+    "astro-icon": "^0.8.1",
     "astro-seo": "^0.8.0",
     "blaze-slider": "^1.9.3",
     "contentful": "^10.6.4",
