--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "contentful": "^10.6.4",
     "minimasonry": "^1.3.2",
     "sass": "^1.69.4",
+    "sharp": "^0.32.6",
     "snarkdown": "^2.0.0",
     "typescript": "^5.2.2"
   },
