sanitize input and clean up

--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
-    "dev:pages": "wrangler pages dev --local=false -- pnpm dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "pages:dev": "wrangler pages dev --compatibility-date=2023-05-30 --proxy 4321 -- astro dev",
+    "pages:dev": "wrangler pages dev --compatibility-date=2024-02-10 --proxy 4321 -- astro dev",
     "pages:deploy": "astro build && wrangler pages deploy ./dist --branch=preview --project-name=brielle-french-design",
     "pages:deploy:prod": "astro build && wrangler pages deploy ./dist --branch=main --project-name=brielle-french-design",
     "format": "prettier -w . --plugin prettier-plugin-astro",
@@ -40,6 +39,7 @@
     "blaze-slider": "^1.9.3",
     "contentful": "^10.6.19",
     "minimasonry": "^1.3.2",
+    "sanitize-html": "^2.11.0",
     "sass": "^1.70.0",
     "sharp": "^0.33.2",
     "snarkdown": "^2.0.0",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
     "@types/minimasonry": "^1.3.4",
+    "@types/sanitize-html": "^2.11.0",
     "@unocss/preset-web-fonts": "^0.58.4",
     "@unocss/reset": "^0.58.4",
     "@unocss/transformer-directives": "^0.58.4",
