--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "astro/tsconfigs/strict",
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
-    "types": ["@cloudflare/workers-types/experimental"]
-  }
+    "types": ["@cloudflare/workers-types/experimental"],
+  },
 }
